k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasker-backend
  namespace: tasker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasker-backend
  template:
    metadata:
      labels:
        app: tasker-backend
    spec:
      containers:
        - name: tasker-backend
          image: danielledvina/tasker-backend:34
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: tasker-backend
  namespace: tasker
spec:
  selector:
    app: tasker-backend
  ports:
    - port: 3000
      targetPort: 3000
