k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasker-frontend
  namespace: tasker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasker-frontend
  template:
    metadata:
      labels:
        app: tasker-frontend
    spec:
      containers:
        - name: tasker-frontend
          image: danielledvina/tasker-frontend:23
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: tasker-frontend
  namespace: tasker
spec:
  selector:
    app: tasker-frontend
  ports:
    - port: 80
      targetPort: 80
