k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasker-ingress
  namespace: tasker
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: tasker.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tasker-backend
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tasker-frontend
                port:
                  number: 80
